src/testData/analysis/inheritance/enumInheritance.cr
class C < <error descr="A type can't inherit directly from Enum. Use 'enum' keyword instead">Enum</error>

end

struct S < <error descr="A type can't inherit directly from Enum. Use 'enum' keyword instead">Enum</error>

end